[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
streamlit = "^1.35.0"
requests = "^2.32.3"
websockets = "^12.0"
jupyter = "^1.0.0"
tqdm = "^4.66.4"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
